welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:14: error: value Pink is not a member of object java.awt.Color
  drawFlower(Color.Pink)
                   ^