welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers() {
  drawFlower(Color.red)
  avance(3)
  drawFlower(Color.cyan)
  recule(5)
  droite()
  avance(2)
  gauche()
  drawFlower(Color.orange)
  recule(3)
  droite()
  avance(2)
  gauche()
  drawFlower(Color.Pink)
  avance(3)
  drawFlower(Color.green)
  recule(5)
}


def drawFlower(c:Color) {
  setCouleurBrosse(c)
  baisseBrosse()
  avance(3)
  recule()
  gauche()
  avance()
  recule(2)
  avance()
  setCouleurBrosse(Color.yellow)
  droite()
  leveBrosse()
}
  
